Code cleanup & Refactoring